package es.masanz.ut6.arkanoid.dao;

import es.masanz.ut6.arkanoid.database.ConnectionManager;
import es.masanz.ut6.arkanoid.model.Nivel;

public class NivelDao {

    public static Nivel obtenerNivel(int id){
        // TODO 01: Buscar y devolver el nivel en caso de existir
        return null;
    }


}
